syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.CA.gRPC";
option java_outer_classname = "LightProto";

/*
  Unary is request/response. The client wants a service,
  it sends a request and receives a response.
  If there is a connection failure, the client has to send the same request again.
 */
service LightServices
{
  rpc ControlLights(LightRequest) returns (LightResponse);
}

message LightRequest
{
  bool lightOn = 1;
}

message LightResponse
{
  string message = 1;
}

